Added java-docs comments Wrapped all endpoints with ResponseEntity